명함집 탭 UI 수정완료(이외 자잘한 UI도 살짝 손봄)

--- a/src/pages/AddInfo.css
+++ b/src/pages/AddInfo.css
@@ -45,8 +45,9 @@
 }
 
 .add-info-header {
-  margin-bottom: 32px;
-  padding-top: 16px;
+  margin-bottom: 16px;
+  padding-top: 40px;
+  text-align: center;
 }
 
 .add-info-step {
