--- a/src/pages/PopularGiftsPage.css
+++ b/src/pages/PopularGiftsPage.css
@@ -275,7 +275,7 @@
   font-family: 'Inter', 'Noto Sans KR', sans-serif;
   font-size: 16px;
   font-weight: 400;
-  color: #6a7282;
+  color: #584cdc;
   line-height: 24px;
   letter-spacing: -0.3125px;
   height: 24px;
