--- a/src/pages/CalendarPage.css
+++ b/src/pages/CalendarPage.css
@@ -115,10 +115,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transform: rotate(180deg);
 }
 
 .arrow-icon.arrow-right {
-  transform: rotate(270deg);
+  transform: rotate(180deg);
+}
+
+.arrow-icon.arrow-right .arrow-img {
+  transform: rotate(180deg);
 }
 
 .arrow-img {
@@ -240,7 +245,7 @@
 .events-list {
   display: flex;
   flex-direction: column;
-  gap: 0;
+  gap: 8px;
   width: 100%;
 }
 
